--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,9 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "ap_abstract0.h": "c",
+        "ap_abstract1.h": "c",
+        "box_internal.h": "c"
     }
 }
