starting to use octs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,13 +253,18 @@ if(NOT EXISTS "${APRON_DIR}")
   execute_process(COMMAND ${TOOLS_DIR}/download_apron.sh)
 endif()
 
-set(APRON_LIB boxD_debug)
+set(APRON_BOX_LIB boxD_debug)
+set(APRON_OCT_LIB octD_debug)
 set(APRON_LIB_2 apron_debug)
 
-add_library(${APRON_LIB} SHARED IMPORTED)
-set_target_properties(${APRON_LIB} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/libboxD_debug.a)
-list(APPEND LIBS ${APRON_LIB})
-target_include_directories(${APRON_LIB} INTERFACE ${APRON_DIR}/installed/include)
+add_library(${APRON_BOX_LIB} SHARED IMPORTED)
+add_library(${APRON_OCT_LIB} SHARED IMPORTED)
+set_target_properties(${APRON_BOX_LIB} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/libboxD_debug.a)
+set_target_properties(${APRON_OCT_LIB} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/liboctD_debug.a)
+list(APPEND LIBS ${APRON_BOX_LIB})
+list(APPEND LIBS ${APRON_OCT_LIB})
+target_include_directories(${APRON_BOX_LIB} INTERFACE ${APRON_DIR}/installed/include)
+target_include_directories(${APRON_OCT_LIB} INTERFACE ${APRON_DIR}/installed/include)
 
 add_library(${APRON_LIB_2} SHARED IMPORTED)
 set_target_properties(${APRON_LIB_2} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/libapron_debug.a)
