--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,16 +255,21 @@ endif()
 
 set(APRON_BOX_LIB boxD_debug)
 set(APRON_OCT_LIB octD_debug)
+set(APRON_T1P_LIB t1pD_debug)
 set(APRON_LIB_2 apron_debug)
 
 add_library(${APRON_BOX_LIB} SHARED IMPORTED)
 add_library(${APRON_OCT_LIB} SHARED IMPORTED)
+add_library(${APRON_T1P_LIB} SHARED IMPORTED)
 set_target_properties(${APRON_BOX_LIB} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/libboxD_debug.a)
 set_target_properties(${APRON_OCT_LIB} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/liboctD_debug.a)
+set_target_properties(${APRON_T1P_LIB} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/libt1pD_debug.a)
 list(APPEND LIBS ${APRON_BOX_LIB})
 list(APPEND LIBS ${APRON_OCT_LIB})
+list(APPEND LIBS ${APRON_T1P_LIB})
 target_include_directories(${APRON_BOX_LIB} INTERFACE ${APRON_DIR}/installed/include)
 target_include_directories(${APRON_OCT_LIB} INTERFACE ${APRON_DIR}/installed/include)
+target_include_directories(${APRON_T1P_LIB} INTERFACE ${APRON_DIR}/installed/include)
 
 add_library(${APRON_LIB_2} SHARED IMPORTED)
 set_target_properties(${APRON_LIB_2} PROPERTIES IMPORTED_LOCATION ${APRON_DIR}/installed/lib/libapron_debug.a)
