--- a/src/nlr/CMakeLists.txt
+++ b/src/nlr/CMakeLists.txt
@@ -23,3 +23,5 @@ network_level_reasoner_add_unit_test(ParallelSolver)
 if (${BUILD_PYTHON})
     target_include_directories(${MARABOU_PY} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 endif()
+
+add_subdirectory(ai)
