--- a/src/nlr/ai/AbstractDomain/CMakeLists.txt
+++ b/src/nlr/ai/AbstractDomain/CMakeLists.txt
@@ -5,3 +5,6 @@ target_sources(${MARABOU_LIB} PRIVATE ${SRCS})
 target_include_directories(${MARABOU_LIB} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_subdirectory(Zonotope)
+add_subdirectory(ZonotopeN)
+add_subdirectory(PolyhedronUnder)
+add_subdirectory(PolyhedronUnderN)
